# waterkit_rs

./: .gitignore  Cargo.toml  protein_prepared_amber.pdbqt  readme.md  receptor.OW.map  receptor.d.map  receptor.e.map  vina.O_DA.map
dev_pars/: my_ad_map.json  myreceptor.json  mywater_molecule.json  receptor_maps.fld
src/: atom.rs  autodock_map.rs  fld_parser.rs  force_fields_parser.rs  hydrogen_bonds.rs  lib.rs  map_parser.rs  params_parser.rs  run_waterkit.rs  sampling.rs  utils.rs  water.rs  waterbox.rs  waterkit.rs
