[package]
name = "waterkit-rs"
version = "0.1.0"
edition = "2021"

[lib]
# The name of the native library. This is the name which will be used in Python to import the
# library (i.e. `import string_sum`). If you change this, you must also change the name of the
# `#[pymodule]` in `src/lib.rs`.
name = "string_sum"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
kd-tree = "0.6.0"
vek = "0.17.1"
rand = "0.8.5"
ndarray = "0.16.1"
nalgebra = "0.33.2"
pdbtbx = { path = "../pdbtbx" }
anyhow = "1.0.95"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
